--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ["https://www.paypal.com/paypalme/PMaillot"]
+custom: paypal.me/PMaillot # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
